--- a/monitor/platformio.ini
+++ b/monitor/platformio.ini
@@ -15,6 +15,8 @@ framework = arduino
 upload_port =  /dev/ttyUSB0
 board_build.mcu = esp8266
 lib_deps = 
+	WiFiSetup@1.0.0
 	olikraus/U8g2@^2.35.19
 	knolleary/PubSubClient@^2.8
 	bblanchon/ArduinoJson@^7.0.4
+	arduino-libraries/NTPClient@^3.2.1
